apps/argocd-ingress/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress-tailscale
  namespace: argocd
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
      - argocd.hydra-cliff.ts.net
      secretName: argocd-tailscale-tls
  rules:
  - host: argocd.hydra-cliff.ts.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-cd-argocd-server
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-cloudflare
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - argofixed.seanchoo.top
      secretName: argocd-server-tls
  rules:
  - host: argofixed.seanchoo.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-cd-argocd-server
            port:
              number: 80
